--- a/lights-out/src/Cell.css
+++ b/lights-out/src/Cell.css
@@ -1,9 +1,11 @@
 .Cell {
   height: 100px;
   width: 100px;
-  background-color: darkgray;
+  background-color: #263238;
+  border-radius: 1px;
+  transition: background-color 0.3s ease;
 }
 
 .Cell-lit {
-  background-color: white;
+  background-color: #00bcd4;
 }
